Fixes drawer so stuff doesn't overflow

--- a/app/javascript/styles/custom.scss
+++ b/app/javascript/styles/custom.scss
@@ -7,7 +7,9 @@
   }
 
   .drawer {
-    width: 17%;
+    flex-grow: 1 !important;
+    flex-basis: 200px !important;
+    min-width: 268px;
     max-width: 400px;
   }
 }
